deploy/base/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: security-profiles-operator
