deploy/base/operator.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: security-profiles-operator
  namespace: security-profiles-operator
spec:
  selector:
    matchLabels:
      name: security-profiles-operator
  template:
    metadata:
      annotations:
        openshift.io/scc: privileged
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
        container.seccomp.security.alpha.kubernetes.io/security-profiles-operator: localhost/security-profiles-operator.json
      labels:
        name: security-profiles-operator
    spec:
      serviceAccountName: security-profiles-operator
      containers:
        - name: security-profiles-operator
          image: security-profiles-operator
          imagePullPolicy: Always
          volumeMounts:
          - name: host-operator-volume
            mountPath: /var/lib/kubelet/seccomp/operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 2000
            runAsGroup: 2000
            capabilities:
              drop: ["ALL"]
            seLinuxOptions:
              # FIXME(jaosorior): Use a more restricted selinux type
              type: spc_t
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "128Mi"
              cpu: "300m"
              ephemeral-storage: "200Mi"
      volumes:
      # /var/lib is used as symlinks cannot be created across different volumes
      - name: host-varlib-volume
        hostPath:
          path: /var/lib
          type: Directory
      - name: host-operator-volume
        hostPath:
          path: /var/lib/security-profiles-operator
          type: DirectoryOrCreate
      - name: profile-configmap-volume
        configMap:
          name: security-profiles-operator-profile
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
      nodeSelector:
        kubernetes.io/os: linux
