deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: security-profiles-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    name: security-profiles-operator-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-controller-runtime
  namespace: security-profiles-operator
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8442
  selector:
    name: spod
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-spod
  namespace: security-profiles-operator
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8443
  selector:
    name: spod
