deploy/base/mutatingwebhookconfig.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: spo-mutating-webhook-configuration
