deploy/base/webhookconfig.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: spo-mutating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: security-profiles-operator/webhook-cert
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: profilebinding-webhook-service
      namespace: security-profiles-operator
      path: /mutate-v1-pod
  failurePolicy: Fail
  name: mpod.kb.io
  objectSelector:
    matchExpressions:
    - key: name
      operator: NotIn
      values:
      - security-profiles-operator
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - pods
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
